Ctags: Wrap with quotes

Paths can contain spaces, wrap with quotes

BUG: 378322